fixtures/runtime/valid/runtime_types/return-string.php
<?php
function label(): string {
    return "ok";
}

echo label(), "\n";
