fixtures/runtime/invalid/runtime_types/return-string-fail.php
<?php
function label(): string {
    return [];
}

label();
